# https-server-project

./: CLAUDE.md  HTTPS_INTERNALS.md  demo.md  main.py  pyproject.toml
certs/: server.crt  server.csr  server.key
src/https_server/: __init__.py  generate_cert.py  https_server.py  server.py
