[project]
name = "https-server"
version = "0.1.0"
description = "Learning project: HTTP server implementation from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
http-server = "https_server.server:main"
https-server = "https_server.https_server:main"
generate-cert = "https_server.generate_cert:main"
